# pubgator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/pubgator/: __init__.py  client.py  models.py
tests/: test_entity.py
