[project]
authors = [{name = "fxwiegand", email = "fxwiegand@wgdnet.de"}]
name = "pubgator"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "httpx >=0.28.1,<0.29", "bioc>=2.1,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
pubgator = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "pyright"
test = "pytest -s"

[tool.pixi.feature.dev.pypi-dependencies]
ruff = "*"
pyright = "*"
typing-extensions = "*"
pytest = "*"

[tool.pixi.environments]
dev = { features = ["dev"] }
